# mosaic-art-rust

./: .gitignore  .mise.toml  .prettierignore  .prettierrc.json  ADJACENCY_FEATURE_RUST.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  convert_images_fixed.sh  i18n.toml  package.json  pnpm-lock.yaml
.claude/commands/: mosaic.md  release.md
.github/workflows/: ci.yml  coverage.yml  deploy-docs.yml  deploy-pages.yml
assets/i18n/en-US/: main.ftl
assets/i18n/ja-JP/: main.ftl
coverage/: mosaic-rust-coverage.json
docs/: README.md  index.md  package.json  verbose-logging-implementation.md
docs/.vitepress/: config.mjs
docs/api/: core.md  index.md  modules.md
docs/architecture/: index.md
docs/cli/: examples.md  reference.md
docs/gallery/: examples.md  index.md  showcase.md
docs/getting-started/: first-mosaic.md  index.md  installation.md  quick-start.md  troubleshooting.md
docs/gui/: README.md  advanced-settings.md  architecture.md  examples.md  getting-started.md  index.md  interface-guide.md  troubleshooting.md
docs/guide/: index.md
src/: adjacency.rs  color_adjustment.rs  grid_visualizer.rs  lib.rs  main.rs  optimizer.rs  similarity.rs  test_iced.rs  time_tracker.rs
src/gui/: app.rs  app_full.rs  app_simple.rs  app_working.rs  main.rs
src/gui/components/: file_picker.rs  mod.rs  progress_display.rs  settings_panel.rs
src/gui/styles/: mod.rs  theme.rs
src/gui/utils/: background_processor.rs  grid_calculator.rs  mod.rs
