[package]
name = "mosaic-rust"
version = "0.2.0"
edition = "2021"

[dependencies]
image = "0.25"
fast_image_resize = { version = "5", features = ["rayon"] }
palette = { version = "0.7", features = ["std"] }
kiddo = "5"
rayon = "1.10"
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
# GUI dependencies
iced = { version = "0.12", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
rfd = "0.14"

[dev-dependencies]
tempfile = "3.10"

# Binary targets
[[bin]]
name = "mosaic-rust"
path = "src/main.rs"

[[bin]]
name = "mosaic-gui"
path = "src/gui/main.rs"
test = false

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
